test/features/errors/runtime/e3001_division_by_zero.spl
# E3001: Division by Zero

Feature: E3001 - Attempt to Divide by Zero
  As a Simple runtime
  I want to detect division by zero
  So that the error is caught at runtime

  Background:
    Given I have the Simple runtime

  Scenario: Integer division by zero
    When I run:
      '''
      fn test():
        val x = 10
        val y = 0
        val z = x / y  # Runtime error: division by zero
      '''
    Then I should see runtime error E3001
    And the error message should be "attempt to divide by zero"
    And the label should indicate "division by zero"
    And the help should suggest "ensure the divisor is not zero before division"

  Scenario: Modulo by zero
    When I run:
      '''
      fn test():
        val x = 10
        val z = x % 0  # Runtime error
      '''
    Then I should see runtime error E3001

  Scenario: Valid division
    When I run:
      '''
      fn test():
        val x = 10
        val y = 2
        val z = x / y  # OK: result is 5
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      fn test():
        val z = 10 / 0
      '''
    Then I should see runtime error E3001
    And the error message should contain "0으로 나누기"
